Centralized API endpoints in `EvilConstants`, removed unused variables and methods, simplified conditional checks, and replaced legacy OpenAlBindings implementation with a compact record-based structure.